# django-django

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
blog/blog/: settings.py  urls.py
blog/posts/: urls.py  views.py
blog/posts/templates/posts/: home.html  post.html
blog/templates/: base.html
cfehome/cfehome/: asgi.py  settings.py  urls.py  views.py  wsgi.py
cfehome/commando/management/commands/: auto_admin.py
cfehome/templates/: hello-world.html
djangoMongoSeek/: manage.py
djangoMongoSeek/api/: urls.py  views.py
djangoMongoSeek/api/templates/: index.html
djangoMongoSeek/djangoMongoSeek/: asgi.py  settings.py  urls.py  wsgi.py
djrestlearn/: manage.py
djrestlearn/api/: models.py  serializer.py  urls.py  views.py
djrestlearn/api/migrations/: 0001_initial.py
djrestlearn/djrestlearn/: asgi.py  settings.py  urls.py  wsgi.py
example/: README.md
example/example/: settings.py
mongodemoproject/: manage.py
mongodemoproject/mongodemoproject/: asgi.py  settings.py  urls.py  wsgi.py
myfirstapp/myapp/: models.py  urls.py  views.py
myfirstapp/myapp/migrations/: 0001_initial.py
myfirstapp/myapp/templates/: base.html  home.html  todos.html
myfirstapp/myfirstapp/: asgi.py  settings.py  urls.py  wsgi.py
projectTranslate/: README.md  manage.py
projectTranslate/apps/frontend/: models.py  serializer.py  urls.py  views.py
projectTranslate/projectTranslate/: asgi.py  settings.py  urls.py  wsgi.py
projectTranslate/staticfiles/: log.js  style.css  swap.js
(+7 files in other folders)
